# ai-monitoring

./: .gitignore  README.md  package-lock.json  package.json
infra/compose/: docker-compose.yml
infra/deploy/: gateway-api.deployment.yaml  ingest-api.deployment.yaml  processor.deployment.yaml  web.deployment.yaml
scripts/: reset_local_data.sh  run_local_browser_e2e.sh  run_local_gateway.sh  run_local_ingest_api.sh  run_local_processor_once.sh  run_local_web.sh  send_sample_log.sh  start_local_db_stack.sh  stop_local_db_stack.sh  verify_local_e2e.sh
services/gateway-api/: .env.example  Dockerfile  pyproject.toml
services/gateway-api/gateway_api/: app.py  auth.py  config.py  query_service.py
services/gateway-api/tests/: test_gateway_api.py
services/ingest-api/: .env.example  Dockerfile  pyproject.toml
services/ingest-api/ingest_api/: app.py  config.py  storage.py
services/ingest-api/tests/: test_ingest_api.py
services/processor/: .env.example  Dockerfile  pyproject.toml
services/processor/processor/: config.py  job_runner.py  main.py
services/processor/tests/: test_job_runner.py
services/web/: .env.example  Dockerfile  index.html  package.json
services/web/src/: App.jsx  api.js  presenters.js  styles.css
services/web/tests/: api.test.js  e2e.test.js  presenters.test.js  routes.test.js  smoke.test.js
tests/: test_end_to_end_flow.py
