[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-monitoring-gateway-api"
version = "0.1.0"
description = "Gateway API for dashboard, logs, and auth."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "clickhouse-connect>=0.7,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "ai-monitoring-contracts>=0.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "httpx>=0.27,<1.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway_api*"]

