[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-monitoring-processor"
version = "0.1.0"
description = "Background processor for AI monitoring rollups and derived metrics."
requires-python = ">=3.11"
dependencies = [
  "clickhouse-connect>=0.7,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "ai-monitoring-contracts>=0.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["processor*"]

